--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     font-family: 'WorkSansMedium';
     font-style: normal;
     font-weight: normal;
-    src: local('WorkSansMedium'), local('WorkSansMedium'), url('../fonts/WorkSans-Medium.otf') format('opentype');
+    src: local('WorkSansMedium'), local('WorkSansMedium'), url('./fonts/WorkSans-Medium.otf') format('opentype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -10,7 +10,7 @@
     font-family: 'WorkSansLight';
     font-style: normal;
     font-weight: normal;
-    src: local('WorkSansLight'), local('WorkSansLight'), url('../fonts/WorkSans-Light.otf') format('opentype');
+    src: local('WorkSansLight'), local('WorkSansLight'), url('./fonts/WorkSans-Light.otf') format('opentype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -18,7 +18,7 @@
     font-family: 'WorkSansExtraLight';
     font-style: normal;
     font-weight: normal;
-    src: local('WorkSansExtraLight'), local('WorkSansExtraLight'), url('../fonts/WorkSans-ExtraLight.otf') format('opentype');
+    src: local('WorkSansExtraLight'), local('WorkSansExtraLight'), url('./fonts/WorkSans-ExtraLight.otf') format('opentype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
