--- a/style.css
+++ b/style.css
@@ -85,3 +85,13 @@ a{
     padding-right: 75px;
     padding-top: 7px;
 }
+
+.vis-div{
+    width:100%;
+    height:100%;
+}
+
+#map{
+    width:100%;
+    height:90vh;
+}
